--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="india_top_places">
-        <item>Select your City</item>
+        <item>Select your current City</item>
         <item>Agartala</item>
         <item>Agra</item>
         <item>Agumbe</item>
@@ -195,7 +195,7 @@
     </string-array>
 
     <string-array name="india_states">
-        <item>Select your State</item>
+        <item>Select your current State</item>
         <item>Andaman and Nicobar Islands</item>
         <item>Andhra Pradesh</item>
         <item>Arunachal Pradesh</item>
